Actualizacion icono del perfil

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </li>
           <li>
             <a href="">
-              <img src="imagenes/Foto_Perfil_Google.jpg" alt="" />
+              <img src="imagenes/Icon_Perfil.png" alt="" />
             </a>
           </li>
         </ul>
